@@ -7,6 +7,7 @@
 		<setting visible="false" type="bool" default="true" id="show-map" 	label="Show map" />
 		<setting visible="false" type="bool" default="true" id="show-maplocation" 	label="Show location on the map" enable="!eq(-1,false)" />
 		<setting visible="false" type="bool" default="true" id="show-items" 	label="Show items" />
+		<setting visible="true" type="bool" default="true" id="updater" 	label="Auto-Updater" />
 		
 		<setting visible="false" type="bool" default="true" id="savegame-onexit" 	label="Save Game @ User Exit" />
 		<setting visible="false" type="text" id="txt-winner"	default="WINNER"	label="WINNER" />
