@@ -1,3 +1,8 @@
+[B]Version 0.2.1[/B]
+
+[I]06-11-2014[/I]
+- File Updater.
+
 [B]Version 0.2.0[/B]
 
 [I]06-11-2014[/I]
